--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "PyTextGame"
-version = "1.1.1.b.1"
+version = "0.1"
 authors = [
   { name="Himank Deka", email="neil.himank3@gmail.com" },
 ]
-description = "A package for building text based games and commercial GUI game logic."
+description = "A package for building text based games."
 readme = "README.md"
 requires-python = ">=3.11"
 classifiers = [
